# TriCICL

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/research/mathieu/: aggregate_split_mnist_results.py  benchmark_split_mnist.py  demo_cifar_100.py  display_aggregated_mnist_results.py  display_aggregated_results.py  tricicl_plugins.py
src/research/mathieu/gcloud/: aggregate_gcloud_results.py  demo_split_mnist.py  utils.py  (+9 more)
src/tricicl/: constants.py
src/tricicl/cil_memory/: memory.py  plugin.py  replay.py
src/tricicl/loggers/: csv_aggregation.py  tb.py  tb_aggregation.py
src/tricicl/metrics/: confusion_matrix.py  normalized_accuracy.py  representation_shift.py
src/tricicl/models/: feature_based_module.py  resnet_32.py  simple_cnn.py  simple_mlp.py
src/tricicl/storage/: gcloud.py  local_storage.py  remote_storage.py
src/tricicl/strategies/: icarl.py  lwf_mc.py
src/tricicl/triplet_loss/: before_exp_distillation_plugin.py  penalty.py  trainer.py  triplet_loss_alternate_training_plugin.py  triplet_loss_during_training_plugin.py  triplet_loss_post_training_plugin.py  triplet_loss_pre_training_plugin.py
src/tricicl/utils/: path.py
tricicl/: constants.py
tricicl/cil_memory/strategy/: closest_to_center.py  herding.py  strategy.py
tricicl/loggers/: tb_aggregation.py
tricicl/models/: feature_based_module.py  simple_mlp.py
tricicl/models/nme/: nme.py  plugin.py
tricicl/research/mathieu/: aggregate_split_mnist_results.py  benchmark_split_mnist.py  display_aggregated_mnist_results.py
tricicl/strategies/: icarl.py
tricicl/utils/: time.py
(+5 files in other folders)
