[tool.poetry]
name = "tricicl"
version = "0.1.0"
description = "TRIplet loss for Class-Incremental Continual Learning"
authors = [
    "Mathieu Béligon <beligonmathieu@gmail.com>",
    "Reza Davari <davari.mreza@gmail.com>",
]
packages = [
    { include = "tricicl", from = "src" },
    { include = "research", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.7"
avalanche = { git = "https://github.com/ContinualAI/avalanche.git", rev = "74109aa3", python = ">=3.7,<=3.9.2" }
more-itertools = "^8.7.0"
seaborn = "^0.11.1"
tqdm = "^4.60.0"
torch = "^1.8.1"
torchvision = "^0.9.1"
black = "20.8b1"
tensorflow = "^2.4.1"
google-cloud-storage = "^1.37.1"

[tool.black]
line-length = 120
target_version = [
    "py37"
]

[build-system]
requires = [
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"
